--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <span>G</span>
                 <span>H</span>
                 <span>I</span>
-                <span>G</span>
+                <span>J</span>
                 <span>K</span>
                 <span>L</span>
                 <span>M</span>
